--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     <!-- <meta http-equiv="refresh" content="10" /> -->
-    <link rel="icon" href="<%= BASE_URL %>favicon.ico" />
+    <link rel="icon" href="<%= BASE_URL %>gerb.ico" />
     <link
       href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,400&display=swap"
       rel="stylesheet"
     />
-    <title>Sport | 5 Tashabbus</title>
+    <title>O‘zbekiston Respublikasi Oliy ta’lim, fan va innovatsiyalar vazirligi</title>
   </head>
   <body>
     <noscript>
